# gfx-from-scratch

./: .gitmodules  CMakeLists.txt  README.md
Source/: Config.c  Config.h  Display.c  Display.h  Hooks.c  Hooks.h  Main.c
Source/Chip8/: Chip8.c  Chip8.h  Config.h
Source/Raytracer/: Hooks.c  Hooks.h  Math.c  Math.h  RayTracer.h  Raytracer.c  Raytracer.h  Scene.c  Scene.h  Viewport.c  Viewport.h
Source/Renderer/: Display.c  Display.h  Hooks.h  Renderer.h
Source/Util/: Array.c  Array.h  Color.c  Color.h  Util.h
